style.css
* {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  user-select: none;
}

:root {
  --bgBody: #eeeff6;
  --textColor: #555555;
  --purple: #9032d4;
  --red: #e24114;
  --green: #4cbb17;
  --light-grey: #f7f7f7;
  --middle-grey: #eee;
  --white: #fff;
  --dark-grey: #c0c0c0;
  --blue: #00ffff;
  --black: #000;
}

button,
select,
#date {
  cursor: pointer;
}

input:focus,
select:focus {
  outline: none;
}

#container {
  align-items: center;
  justify-content: center;
  background-color: var(--bgBody);
  width: 100vw;
  height: 100vh;
  color: var(--textColor);
  font-family:
    system-ui,
    -apple-system,
    Roboto,
    sans-serif;
}

#app {
  flex-direction: column;
  background: var(--light-grey);
  width: 375px;
  height: min(667px, 100vh);
  padding: 15px 15px 0px 15px;
  border-radius: 10px;
}

#home {
  flex: 1;
  flex-direction: column;
}

#header {
  align-items: center;
  justify-content: space-between;
  padding-inline: 5px;
  margin-bottom: 15px;
}

#balance {
  font-weight: 700;
  font-size: 30px;
}

#form-div {
  margin-bottom: 15px;
}

#entry-form {
  display: grid;
  grid-template-columns: 1.3fr 1.5fr 1.2fr;
  grid-template-rows: repeat(2, 1fr);
  gap: 5px;

  * {
    height: 30px;
    border-radius: 3px;
    min-width: 0px;
    background-color: var(--middle-grey);
    padding-left: 5px;
  }

  *.error {
    outline: solid 1px var(--red);
  }
}

#note {
  grid-column: span 2;
}

#amount::-webkit-outer-spin-button,
#amount::-webkit-inner-spin-button,
#category {
  -webkit-appearance: none;
  appearance: none;
}

#category,
#date[value=""],
*::placeholder {
  color: var(--dark-grey);
}

#category {
  option {
    color: var(--black);
  }
}

#date::-webkit-calendar-picker-indicator {
  opacity: 0.5;
  cursor: pointer;
}

#add-entry {
  background-color: var(--purple);
  padding: 0px;
  color: var(--white);
}

#entry-list {
  overflow-x: auto;
  padding-inline: 0px;
}

#menu-button {
  opacity: 0.5;
  height: 35px;
  width: 35px;
  padding: 5px;
  margin-inline: auto;
  background-image: url(./images/menu.png);
  background-repeat: no-repeat;
  background-origin: content-box;
  background-color: inherit;
  background-size: cover;
}

#menu-button.home {
  background-image: url(./images/home.png);
}

#categories {
  flex: 1;
  flex-direction: column;
  align-items: center;
  padding-inline: 20px;

  h2 {
    color: var(--purple);
    margin-bottom: 10px;
  }
}

#category-list {
  width: 100%;
  padding-bottom: 0;
  border-bottom: solid 1.5px var(--dark-grey);
  flex-direction: column;
  gap: 15px;
}

#add-category {
  font-size: 20px;
  margin-top: 15px;
  margin-bottom: 25px;
  padding: 1px 30px;
  background-color: inherit;
  border: solid 1px var(--dark-grey);
}

#menu-button:hover,
#add-category:hover {
  background-color: var(--dark-grey);
}

#new-category {
  background-color: var(--middle-grey);
  padding: 5px 0px 5px 10px;
  font-weight: 600;
  font-size: 15px;
  position: sticky;
  bottom: 0;
}

#cancel-button {
  margin-inline: auto;
  margin-top: 20px;
  width: 100px;
  font-size: 18px;

  img {
    width: 25px;
  }

  p {
    align-self: center;
  }
}

.entry {
  display: grid;
  grid-template-columns: 40% 30% auto;
  padding: 8px 15px;
  gap: 10px;

  div:first-child {
    h6 {
      word-break: break-all;
      overflow-wrap: break-word;
      font-size: 15px;
    }
    p {
      color: var(--dark-grey);
      font-size: 10px;
    }
  }

  div:nth-child(2) {
    justify-self: right;
    visibility: hidden;
  }

  div:last-child {
    align-self: center;
    justify-self: right;
  }
}

.entry:hover {
  background-color: var(--middle-grey);

  div:nth-child(2) {
    visibility: visible;
  }
}

.category {
  display: flex;

  input {
    flex: 1;
    width: 100%;
    pointer-events: none;
    padding-left: 10px;
    font-size: 15px;
    font-weight: 600;
    height: 30px;
    background-color: inherit;
  }

  input:focus {
    pointer-events: auto;
    background-color: var(--middle-grey);
  }

  div {
    padding-right: 15px;
  }
}

.edit-delete-buttons {
  display: flex;
  button {
    width: 30px;
    height: 30px;
    padding: 5px;
    border-radius: 5px;
    background-repeat: no-repeat;
    background-origin: content-box;
    background-size: cover;
    background-color: inherit;
  }

  button:hover {
    background-color: var(--dark-grey);
  }

  button:first-child {
    background-image: url(./images/edit.png);
    margin-right: 5px;
  }

  button:last-child {
    background-image: url(./images/delete.png);
  }
}

.overflow-scroll {
  padding-inline: 0;
  flex: 1;
  flex-basis: 0;
  overflow-y: auto;
}

.white-container {
  background-color: var(--white);
  padding: 7px;
  border-radius: 10px;
}

.positive {
  color: var(--green);
}

.negative {
  color: var(--red);
}

.flex {
  display: flex;
}

.none {
  display: none;
}

